--- a/api/bottles/models/bottles.settings.json
+++ b/api/bottles/models/bottles.settings.json
@@ -32,6 +32,14 @@
     },
     "description": {
       "type": "text"
+    },
+    "users_permissions_user": {
+      "plugin": "users-permissions",
+      "model": "user",
+      "via": "bottles"
+    },
+    "slug": {
+      "type": "uid"
     }
   }
 }
