--- a/extensions/users-permissions/models/User.settings.json
+++ b/extensions/users-permissions/models/User.settings.json
@@ -58,6 +58,10 @@
       "via": "users",
       "plugin": "users-permissions",
       "configurable": false
+    },
+    "bottles": {
+      "via": "users_permissions_user",
+      "collection": "bottles"
     }
   }
 }
